[gd_scene load_steps=4 format=3 uid="uid://ya3jg6s3rt2u"]

[ext_resource type="PackedScene" uid="uid://cp4ds2pxuam2d" path="res://Weapons/Weapon_Scenes/weapon_template.tscn" id="1_p1qu3"]
[ext_resource type="Script" path="res://Weapons/Weapons_Prefab/Dagger/dagger_throw.gd" id="2_v1bsx"]
[ext_resource type="Texture2D" uid="uid://be1ygbe1wtr2t" path="res://Weapons/Sprites/Arm_player2.png" id="4_mmejr"]

[node name="Dagger_Throw" instance=ExtResource("1_p1qu3")]
script = ExtResource("2_v1bsx")

[node name="WeaponTexture" parent="." index="0"]
position = Vector2(0, 5.96046e-08)
rotation = 0.785398
offset = Vector2(5.86163, -5.92405)
region_rect = Rect2(32, 48, 16, 16)

[node name="Arm_1" parent="." index="1"]
z_index = 1
texture = ExtResource("4_mmejr")

[node name="Arm_2" parent="." index="2"]
visible = false
z_index = 1
position = Vector2(2, -4)

[node name="Attack_Timer" type="Timer" parent="." index="3"]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="Attack_Timer" to="." method="_on_attack_timer_timeout"]
